--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <section>
+         <h2 style="color: rgb(85, 85, 255);"><b><i> &nbsp Sreyas's Simple Calculator</i></b></h2>
         <div class="container">
             <div id="display"></div>
             <div class="buttons">
